--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="d-flex justify-content-evenly">
           <div
-            class="card text-dark bg-primary mt-5 mb-3 p-5 bg-opacity-25 shadow"
+            class="card text-dark bg-primary mt-5 mb-3 p-5 bg-opacity-25 shadow card-work"
             style="max-width: 18rem"
           >
             <div class="card-body">
@@ -15,8 +15,7 @@
             </div>
           </div>
           <div
-            class="card text-dark bg-primary mt-5 mb-3 p-5 bg-opacity-25 shadow"
-            class="card text-dark bg-secondary mb-3 p-5 bg-opacity-25 shadow"
+            class="card text-dark bg-secondary mt-5 mb-3 p-5 bg-opacity-25 shadow card-work"
             style="max-width: 18rem"
           >
             <div class="card-body">
@@ -27,7 +26,7 @@
             </div>
           </div>
           <div
-            class="card text-dark bg-success mt-5 mb-3 p-5 bg-opacity-25 shadow"
+            class="card text-dark bg-success mt-5 mb-3 p-5 bg-opacity-25 shadow card-work"
             style="max-width: 18rem"
           >
             <div class="card-body">
@@ -43,13 +42,13 @@
 
     <div class="container">
       <div class="row p-5 text-center">
-        <div class="col card h-25" style="margin-right: 50px">
+        <div class="col card h-25 card-work" style="margin-right: 50px">
           <div class="card-body">
             <h1 class="p-2" style="color: rgb(255, 99, 132)">User Data</h1>
             <canvas id="userChart"></canvas>
           </div>
         </div>
-        <div class="col card">
+        <div class="col card card-work">
           <div class="card-body" style="margin-left: 50px">
             <h1 class="p-2" style="color: rgb(255, 99, 132)">Sales Data</h1>
             <canvas id="salesChart"></canvas>
