--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -16,7 +16,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="users/styles/cardHover.css" />
+    <link rel="stylesheet" href="users/styles/styles.css" />
     <link rel="stylesheet" href="users/styles/validation.css" />
 
     <!-- icons  -->
@@ -53,25 +53,6 @@
 
     <!-- chart -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-      .page-fill {
-        position: relative;
-        min-height: 100vh;
-      }
-
-      .card-work:hover {
-        transform: scale(1.1);
-      }
-
-      .card-work {
-        transition: all 0.5s ease;
-      }
-
-      #footer {
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
   </head>
 
   <body>
