--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -82,7 +82,7 @@
     <div class="row list-item">
       <% locals.products.forEach(product=>{%>
       <div class=" col-md-3 col-sm-6 p-3 d-flex justify-content-center">
-        <div class="card shadow rounded" style="width: 16rem">
+        <div class="card shadow rounded card-work" style="width: 16rem">
           <div>
             <a href="/singleProduct/<%= product._id %>">
               <img
