--- a/views/users/categoryProducts.ejs
+++ b/views/users/categoryProducts.ejs
@@ -1,7 +1,7 @@
 <!-- carousel -->
-<section class="page-fill pt-5" style="background-color: #eaddbf">
+<section class="page-fill pt-5" style="background-color: #ece6d9" >
   
-    <div class="pb-3" style="background-color: #ddc898">
+    <div class="pb-3" style="background-color: #e4d7b5">
       <!-- Example split danger button -->
       <div class="btn-group zindex-offcanvas mt-3">
         <button type="button" class="btn btn-outline-secondary text-dark ms-5">
@@ -15,7 +15,7 @@
         >
           <span class="visually-hidden">Toggle Dropdown</span>
         </button>
-        <ul class="dropdown-menu opacity-75" style="background-color: #dbbf80">
+        <ul class="dropdown-menu opacity-75" style="background-color: #ddc896">
           <li>
             <a class="dropdown-item" href="/category/all">All products</a>
           </li>
@@ -45,7 +45,7 @@
                 />
               </a>
             </div>
-            <div class="card-body" style="background-color: #ede2c8">
+            <div class="card-body" style="background-color: #e9e0ca">
               <h5 class="card-title"><%= product.Name %></h5>
               <p class="card-text"><%= product.Price %> ₹</p>
               <p class="card-text"><%= product.Description %></p>
