--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1,5 +1,7 @@
 <!-- carousel -->
-<section style="background-color: #eaddbf">
+<!-- style="background-color: #ece6d9" -->
+<!--real style="background-color: #eaddbf" -->
+<section style="background-color: #ece6d9" >
   <div
     id="carouselExampleControls"
     class="carousel slide overflow-hidden"
@@ -48,7 +50,7 @@
     </button>
   </div>
 
-  <div class="pb-3" style="background-color: #ddc898">
+  <div class="pb-3" style="background-color: #e4d7b5">
     <!-- Example split danger button -->
     <div class="btn-group zindex-offcanvas mt-3">
       <button type="button" class="btn btn-outline-secondary text-dark ms-5">
@@ -62,7 +64,7 @@
       >
         <span class="visually-hidden">Toggle Dropdown</span>
       </button>
-      <ul class="dropdown-menu opacity-75" style="background-color: #dbbf80">
+      <ul class="dropdown-menu opacity-75" style="background-color: #ddc896">
         <li>
           <a class="dropdown-item" href="/category/all">All products</a>
         </li>
@@ -92,7 +94,7 @@
               />
             </a>
           </div>
-          <div class="card-body" style="background-color: #ede2c8">
+          <div class="card-body" style="background-color: #e9e0ca">
             <h5 class="card-title"><%= product.Name %></h5>
             <p class="card-text"><%= product.Price %> ₹</p>
             <p class="card-text"><%= product.Description %></p>
