--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -1,4 +1,4 @@
-<section class="page-fill" style="background-color: #eaddbf">
+<section class="page-fill" style="background-color: #ece6d9">
     <div style="padding-top: 5%; padding-bottom: 5%;">
       <div class="container shadow-lg rounded pb-2 pt-2">
         <div class="row d-flex pb-2"><i class="fa-solid fa-heart fa-4x" ><span style="font-size: 23%;" >wish - list</span></i></div>
