--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -19,6 +19,27 @@
     <link rel="stylesheet" href="users/styles/styles.css" />
     <link rel="stylesheet" href="users/styles/validation.css" />
 
+    <!-- default styles -->
+    <style>
+      .page-fill {
+        position: relative;
+        min-height: 100vh;
+      }
+
+      .card-work:hover {
+        transform: scale(1.1);
+      }
+
+      .card-work {
+        transition: all 0.5s ease;
+      }
+
+      #footer {
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
+
     <!-- icons  -->
     <script
       src="https://kit.fontawesome.com/db194f7475.js"
