--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -1,4 +1,4 @@
-<section class="page-fill" style="background-color: #eaddbf">
+<section class="page-fill" style="background-color: #ece6d9" >
   <div style="padding-top: 5%; ">
     <!-- padding-bottom: 5%; -->
     <div class="container shadow-lg rounded pb-2 pt-2">
@@ -55,7 +55,7 @@
  <% if(locals.totalAmount!=0) {%> 
   <div class="container">
     <div class="row d-flex flex-row-reverse">
-      <div class="col-md-2 col-sm-3 card text-center pt-1 shadow-sm" style="background-color: #eaddbf">
+      <div class="col-md-2 col-sm-3 card text-center pt-1 shadow-sm" style="background-color: #ece6d9" >
         <h4>Total : <span id="total"><%=totalAmount  %></span>  ₹</h4>
         <a href="/placeOrder" class="btn btn-outline-success mb-2">Place Order</a>
      </div>
