--- a/views/users/placeOrder.ejs
+++ b/views/users/placeOrder.ejs
@@ -1,5 +1,34 @@
 <section class="page-fill" style="background-color: #ece6d9">
   <div class="container" style="padding-top: 5%; padding-bottom: 5%">
+    <div class="row ms-3 me-3 text-start d-flex flex-sm-row">
+      <!-- Example split danger button -->
+      <div class="btn-group col-md-2">
+        <button type="button" class="btn btn-secondary">Choose Address</button>
+        <button
+          type="button"
+          class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          <span class="visually-hidden">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu">
+          <% let addr =0 %> <% user.addresses.forEach((address)=>{%>
+          <li class="p-2">
+            <a
+              onclick="showAddress('<%=address.house %>', '<%=address.street %>', '<%=address.district %>',
+            '<%=address.state %>', '<%=address.pincode %>','<%=address.mobile %>')"
+              style="cursor: pointer"
+              ><%= ++addr %>: <%=address.house %>, <%=address.street %>,
+              <%=address.district %>, <%=address.state %>, pin:
+              <%=address.pincode %>, ph: <%=address.mobile %>
+              <li><hr class="dropdown-divider" /></li>
+            </a>
+          </li>
+          <% }) %>
+        </ul>
+      </div>
+    </div>
     <form id="checkout-form">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="card col-md-7 col-sm-12 shadow-sm m-3">
@@ -210,5 +239,17 @@
         });
       },
     });
+  }
+</script>
+
+<script>
+  function showAddress(house, street, district, state, pincode, mobile) {
+    console.log(house, street, district, state, pincode, mobile);
+    document.getElementById("house").value = house;
+    document.getElementById("street").value = street;
+    document.getElementById("district").value = district;
+    document.getElementById("state").value = state;
+    document.getElementById("pincode").value = pincode;
+    document.getElementById("mobile").value = mobile;
   }
 </script>
