Razor pay doing

--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -10,7 +10,7 @@
             <div class="card-body">
               <h5 class="card-title">Total Revenue</h5>
               <p class="card-text text-center" style="font-size: 2rem">
-                <%=totalRevenue %> ₹
+                ₹ <%=totalRevenue %>
               </p>
             </div>
           </div>
