--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -40,6 +40,9 @@
       }
     </style>
 
+    <!-- Razorpay -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <!-- icons  -->
     <script
       src="https://kit.fontawesome.com/db194f7475.js"
