--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -2,7 +2,7 @@
   <div class="container h-75 d-flex justify-content-center align-items-center">
     <div class="position-relative">
       <div
-        class="card p-2 shadow text-center"
+        class="card card-work p-2 shadow text-center"
         style="width: 22rem; height: 16rem"
       >
         <form action="/otp" method="post">
