--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,7 +2,7 @@
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
-          <div class="card card-registration my-4">
+          <div class="card card-work card-registration my-4">
             <div class="row g-0 " style="background-color: #ede2c8">
               <div class="col-xl-6 d-none d-xl-block" style="background-color: #ede2c8">
                 <img
