--- a/views/users/placeOrder.ejs
+++ b/views/users/placeOrder.ejs
@@ -138,6 +138,7 @@
           class="card col-md-4 col-sm-12 shadow-sm d-flex justify-content-center align-items-center m-3"
         >
           <div class="container mt-5 checkout mb-3">
+            <div id="total" hidden><%=totalAmount %></div>
             <h5>Total Amount : <%=totalAmount %> ₹</h5>
             <hr style="width: 75%; text-align: left; margin-left: 0" />
             <div class="payment">
@@ -151,10 +152,19 @@
                 />COD
               </label>
               <label class="radio-inline">
-                <input type="radio" name="paymentMethod" value="ONLINE" />Online
-                payment
+                <input
+                  type="radio"
+                  name="paymentMethod"
+                  value="RAZORPAY"
+                />Razor Pay
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="paymentMethod" value="PAYPAL" />Paypal
               </label>
             </div>
+            <div id="paypal-button-container" style="display: none"></div>
+            <div id="order-Id" hidden></div>
+            <div id="phone" hidden></div>
             <div class="mt-2 d-flex flex-row-reverse">
               <button type="submit" class="btn btn-outline-primary">
                 Checkout
@@ -166,6 +176,59 @@
     </form>
   </div>
 </section>
+<!-- Replace "test" with your own sandbox Business account app client ID -->
+<script src="https://www.paypal.com/sdk/js?client-id=AZVI52SU6FbyuNCHmI5Z7tXB9uZQRCMY4ZecBk-bIfYqdnvYx9tpnehTThfn7G8vLb-vfPmKWvscyM0g&currency=USD"></script>
+<!-- Set up a container element for the button -->
+<!-- <div id="paypal-button-container"></div> -->
+<script>
+  paypal
+    .Buttons({
+      style: {
+        color: "blue",
+        shape: "pill",
+        label: "pay",
+        height: 40,
+      },
+      // Order is created on the server and the order id is returned
+      createOrder: (data, actions) => {
+        const total = document.getElementById("total").innerHTML;
+        // console.log("This is the total " + total);
+        return fetch(`/paypal/${total}`, {
+          method: "post",
+          // use the "body" param to optionally pass additional order information
+          // like product ids or amount
+        })
+          .then((response) => response.json())
+          .then((order) => order.id);
+      },
+
+      // Finalize the transaction on the server after payer approval
+      onApprove: (data, actions) => {
+        return fetch(`/paypal/${data.orderID}/capture`, {
+          method: "post",
+        })
+          .then((response) => response.json())
+          .then((orderData) => {
+            // Successful capture! For dev/demo purposes:
+            console.log(
+              "Capture result",
+              orderData,
+              JSON.stringify(orderData, null, 2)
+            );
+            const transaction =
+              orderData.purchase_units[0].payments.captures[0];
+            alert(
+              `Transaction ${transaction.status}: ${transaction.id}\n\nSee console for all available details`
+            );
+            // When ready to go live, remove the alert and show a success message within this page. For example:
+            // const element = document.getElementById('paypal-button-container');
+            // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+            // Or go to another URL:  actions.redirect('thank_you.html');
+          });
+      },
+    })
+    .render("#paypal-button-container");
+</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script
