--- a/views/users/placeOrder.ejs
+++ b/views/users/placeOrder.ejs
@@ -217,9 +217,29 @@
             );
             const transaction =
               orderData.purchase_units[0].payments.captures[0];
-            alert(
-              `Transaction ${transaction.status}: ${transaction.id}\n\nSee console for all available details`
-            );
+
+            let saveRes = "";
+            async function statusPlaced() {
+              const orderId = document.getElementById("order-Id").innerHTML;
+              const mobile = document.getElementById("phone").innerHTML;
+              const status = "Placed";
+              if (transaction.id) {
+                saveRes = await fetch("/admin/setStatus", {
+                  method: "POST",
+                  headers: {
+                    "Content-Type": "application/JSON",
+                  },
+                  body: JSON.stringify({ status, orderId, mobile }),
+                });
+              }
+              if (saveRes) {
+                window.location.href = window.location.origin + "/orders";
+              }
+            }
+            statusPlaced();
+            // alert(
+            //   `Transaction ${transaction.status}: ${transaction.id}\n\nSee console for all available details`
+            // );
             // When ready to go live, remove the alert and show a success message within this page. For example:
             // const element = document.getElementById('paypal-button-container');
             // element.innerHTML = '<h3>Thank you for your payment!</h3>';
