remove product re

--- a/views/admin/viewRequests.ejs
+++ b/views/admin/viewRequests.ejs
@@ -22,7 +22,8 @@
                   <%=request.deliveryDetails.pincode %>, <%=request.deliveryDetails.mobile
                   %>
                 </p>
-                <p><b>Total Amount : </b><%=request.totalAmount %> ₹</p>
+                <p><b>Total Amount : </b>₹ <%=request.totalAmount %></p>
+                <p><b>Payment Method : </b><%=request.paymentMethod %></p>
                 <p><b>Status : </b><%=request.status %></p>
               </div>
               <div class="col text-end">
