--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,10 +1,10 @@
-<section class="h-100" style="background-color: #dbc89c">
+<section class="h-100" style="background-color: #eaddbf">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
           <div class="card card-work card-registration my-4">
-            <div class="row g-0 " style="background-color: #ede2c8">
-              <div class="col-xl-6 d-none d-xl-block" style="background-color: #ede2c8">
+            <div class="row g-0 ">
+              <div class="col-xl-6 d-none d-xl-block" >
                 <img
                   src="users/images/gallery-02.jpg"
                   alt="Sample photo"
@@ -12,13 +12,13 @@
                   style="
                     border-top-left-radius: 0.25rem;
                     border-bottom-left-radius: 0.25rem;
-                    background-color: #ede2c8
+                    
                   "
                 />
               </div>
   
               <div class="col-xl-6">
-                <div class="card-body text-black" style="background-color: #ede2c8">
+                <div class="card-body text-black" >
                   <h3 class="mb-5 text-uppercase d-flex justify-content-center">SIGNUP FORM</h3>
                   <form
                     action="/signup"
@@ -34,7 +34,6 @@
                             class="form-control form-control-lg"
                             name="firstname"
                             id="firstname"
-                            style="background-color: #f0e9d9"
                             placeholder="First name"
                             required
                           />
@@ -48,7 +47,6 @@
                             class="form-control form-control-lg"
                             name="lastname"
                             id="lastname"
-                            style="background-color: #f0e9d9"
                             placeholder="last name"
                             required
                           />
@@ -62,7 +60,6 @@
                         class="form-control form-control-lg"
                         name="username"
                         id="username"
-                        style="background-color: #f0e9d9"
                         placeholder="Username"
                         required
                       />
@@ -75,7 +72,6 @@
                         class="form-control form-control-lg"
                         name="email"
                         id="email"
-                        style="background-color: #f0e9d9"
                         placeholder="Email ID"
                         required
                       />
@@ -87,7 +83,6 @@
                         class="form-control form-control-lg"
                         name="password"
                         id="password"
-                        style="background-color: #f0e9d9"
                         placeholder="Password"
                         required
                       />
@@ -100,7 +95,6 @@
                         class="form-control form-control-lg"
                         name="confirmpassword"
                         id="confirmpassword"
-                        style="background-color: #f0e9d9"
                         placeholder="Confirm password"
                         required 
                       />
@@ -113,7 +107,6 @@
                         class="form-control form-control-lg"
                         name="mobilenumber"
                         id="mobilenumber"
-                        style="background-color: #f0e9d9"
                         placeholder="Mobile Number"
                         required 
                       />
