--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -44,7 +44,7 @@
       <div class="row p-5 text-center">
         <div class="col card h-25 card-work" style="margin-right: 50px">
           <div class="card-body">
-            <h1 class="p-2" style="color: rgb(255, 99, 132)">User Data</h1>
+            <h1 class="p-2" style="color: rgb(255, 99, 132)">Orders /day</h1>
             <canvas id="userChart"></canvas>
           </div>
         </div>
