--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -77,6 +77,9 @@
           >
             <li>
               <%if (locals.user){%>
+              <a class="dropdown-item" style="color: #b0aeae" href="/profile"
+                >Profile</a
+              >
               <a class="dropdown-item" style="color: #b0aeae" href="/logout"
                 >Logout</a
               >
