delete address done

--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -114,7 +114,7 @@ Swal.fire({
   title: 'Removing product from cart',
   html: 'Removing in <b></b> milliseconds.',
   timer: 500,
-  background: "#ded2af",
+  background: "#ece6d9",
   timerProgressBar: true,
   didOpen: () => {
     Swal.showLoading()
